    support for translators with pthread.
  * Add patches/hurd-i386/submitted-fork_port_leak.diff: New patch to fix port
    leak on fork.
  * libc0.3.symbols.hurd-i386: Add libpthread.so.0.3 symbols.
  * Add patches/hurd-i386/tg-hurdsig-boot-fix.diff to fix
    sigstate_is_global_rcv at boot in libpthread-based translators.

 -- Adam Conrad <adconrad@0c3.net>  Mon, 19 Nov 2012 14:23:26 -0700

eglibc (2.13-37) unstable; urgency=low

  [ Aurelien Jarno ]
  * debhelper.in/locales.postinst: correctly lookup for the locales-all
    package.  Closes: #692777.
  * patches/kfreebsd/local-getaddrinfo-freebsd-kernel.diff: update to 
    fix uninitialised bytes access in getaddrinfo().  Closes: #692433.
  * patches/localedata/locale-C.diff: update to fix strftime('%X') return
    a 24-hour time format.  Closes: #693446.

  [ Jonathan Nieder ]
  * control.in/opt: remove outdated reference to 2.6 kernel from
    description of i686 variant.  Thanks to Regid Ichira.  Closes:
    #692154.

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-tls-support.diff: Re-fix port leak in fork(). The
    change was lost while synchronizing with the topgit repository.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 18 Nov 2012 22:53:04 +0100

eglibc (2.13-36) unstable; urgency=low

  [ Aurelien Jarno ]
  * patches/any/cvs-strtod-overflow.diff: new patch from upstream to fix
    an integer/buffer overflow in strtod() (CVE-2012-3480).  Closes: 
    #684889.
  * patches/kfreebsd/local-getaddrinfo-freebsd-kernel.diff: new patch to
    fix getaddrinfo() when service = 0 on a FreeBSD kernel with DNS
    server returning IPv6, but without IPv6 connection.  Closes: #690021.
  * sysdeps/linux.mk: fix kernel version parsing with only two numbers.
  * patches/any/cvs-arch-lowlevellock.diff: new patch from upstream to
    fix futexes atomic issue on ARM and SPARC.  Closes: #691173.
  * local/manpages/ldconfig.8: fix wrong description of ld.so.conf format.
    Closes: #684682.

  [ Samuel Thibault ]