@@ -21,6 +21,8 @@ eglibc (2.13-38) UNRELEASED; urgency=low
   * libc0.3.symbols.hurd-i386: Add libpthread.so.0.3 symbols.
   * Add patches/hurd-i386/tg-hurdsig-boot-fix.diff to fix
     sigstate_is_global_rcv at boot in libpthread-based translators.
+  * patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Update with Thomas'
+    fork deadlock fix.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 19 Nov 2012 14:23:26 -0700
 
